# any-trait

./: .gitignore  AGENTS.md  Cargo.toml  Readme.md  flake.nix  rustfmt.toml
.zed/: settings.json
any-trait/: Cargo.toml
any-trait-macro/: Cargo.toml
any-trait-macro/src/: lib.rs
any-trait/src/: anyptr.rs  lib.rs  typeidconst.rs
any-trait/tests/: manual.rs  traits.rs
