[package]
name = "any-trait-macro"
version = "0.1.1"
edition = "2024"
description = "macros used by the any-trait crate"

homepage   = "https://github.com/LucaFulchir/any-trait"
repository = "https://github.com/LucaFulchir/any-trait"
license = "EUPL-1.2"
keywords = [ "any", "trait", "anytrait", "any-trait" ]
categories = [ "no-std", "rust-patterns" ]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = { version = "1.0" }
syn = { version = "2.0", features = ["full", "extra-traits"] }
